# Maze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Maze/: Maze.cbp  main.cpp
Maze/include/: Camera.h  Coin.h  Collision.h  Map.h  Navigation.h  Score.h
Maze/include/Player/: Player.h  PlayerCircle.h  PlayerSquare.h
Maze/src/: Camera.cpp  Coin.cpp  Collision.cpp  Navigation.cpp  Score.cpp
Maze/src/Player/: Player.cpp  PlayerCircle.cpp  PlayerSquare.cpp
app/: CMakeLists.txt
app/include/: Camera.h  Score.h
app/src/: Camera.cpp  Map.cpp
app/src/Player/: Player.cpp  PlayerSquare.cpp
